--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,10 @@ branches:
   - master
 install:
   - npm install
+  - git clone https://${GH_TOKEN}@github.com/aui/uglifyjs-webpack-plugin.git lib/uglifyjs-webpack-plugin
+  - cd lib/uglifyjs-webpack-plugin
+  - npm install
 script:
-  - npm start
+  - npm run build
+  - npm run build:parallel
+  - npm run build:parallel:cache
