--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   "homepage": "https://github.com/aui/uglifyjs-webpack-plugin-demo#readme",
   "dependencies": {
     "angular": "^1.6.5",
+    "backbone": "^1.3.3",
+    "ember": "^1.0.3",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "react": "^15.6.1",
     "vue": "^2.3.4",
     "webpack": "^3.1.0"
