--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular": "^1.6.5",
     "backbone": "^1.3.3",
     "ember": "^1.0.3",
+    "find-cache-dir": "^1.0.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "react": "^15.6.1",
