--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ cache:
 branches:
   only:
   - master
+  - webpack4
 install:
   - npm install
-  - npm run install-uglifyjs-webpack-plugin
 script:
   - npm run demo
